Make the sidebar width more flexible depending on the screen size to prevent appearing of the horizontal scrollbar on lower resolutions. It'll still appear at around 910px though. If we need to make the layout more responsive we should decide what to do with the sidebars on lower res because otherwise the user interface becomes unusable. For example we can collapse them on low res as the navigation does.

--- a/src/css/ttyg/ttyg.css
+++ b/src/css/ttyg/ttyg.css
@@ -1,5 +1,5 @@
 :root {
-    --sidebar-width: max(220px, 10vw);
+    --sidebar-width: 13vw;
     --toolbar-height: 37px;
 }
 
